--- a/scss/bloks/_header.scss
+++ b/scss/bloks/_header.scss
@@ -2,6 +2,8 @@
     width: 100%;
     background-color: #fff;
     box-shadow: 1px 1px 3px #999;
+    position: fixed;
+    z-index: 9999;
 
     .header{
         @include center (space-between) ;
