--- a/css/main.css
+++ b/css/main.css
@@ -356,7 +356,7 @@ template {
   background-color: #fff;
   box-shadow: 1px 1px 3px #999;
   position: fixed;
-  z-index: 999;
+  z-index: 1000;
 }
 .site-header .header {
   display: flex;
@@ -486,10 +486,29 @@ template {
   text-decoration: none;
   color: #7d7de2;
   transition: all 0.4s;
+  z-index: 1;
   font-size: 14px;
+  position: relative;
+}
+.site-header .header__ariza::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  right: 0;
+  background-color: #008dcb;
+  border-radius: 10px 0;
+  transform: scaleX(0);
+  transition: transform 300ms ease-in-out;
+  transform-origin: left;
+}
+.site-header .header__ariza:hover::before, .site-header .header__ariza:focus::before {
+  transform: scaleX(1);
 }
 .site-header .header__ariza:hover {
-  background-color: #00aeef;
+  border: 2px solid transparent;
   color: #fff;
 }
 
@@ -575,9 +594,8 @@ template {
   border-radius: 25px 0;
   background-color: #00AEEF;
   transform: rotate(270deg);
-  top: 234px;
+  top: 229px;
   left: -79px;
-  z-index: 2;
 }
 
 .koribchiqishlar > span {
@@ -617,6 +635,10 @@ template {
 .hero-section {
   background-color: #00AEEF;
   padding: 110px 0 20px 0;
+  position: relative;
+}
+.hero-section .hero {
+  position: relative;
 }
 .hero-section .hero__item {
   display: flex;
@@ -638,17 +660,57 @@ template {
   position: relative;
   transition: all 0.3s;
 }
-.hero-section .hero__item-list-dropdovn {
+
+.dropdovn {
+  position: absolute;
   padding: 0;
   margin: 0;
-  position: absolute;
-  z-index: 9999;
-  width: 100vw;
-  left: -145px;
-  background-color: rgb(34, 5, 5);
-  padding-left: 145px;
-  top: 45px;
+  top: 150px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
   display: none;
+  z-index: 9999;
+}
+
+.dropdovn-two {
+  display: none;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  top: 150px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  z-index: 9999;
+}
+
+.hero__item-list-dropdovn {
+  padding: 0;
+  margin: 0;
+  width: 33%;
+  background-color: rgb(255, 255, 255);
+  padding: 10px 0;
+}
+
+.hero__item-list-dropdovn-list {
+  position: relative;
+  cursor: pointer;
+  padding: 7px;
+}
+
+.hero__item-list-dropdovn-list:hover {
+  background-color: rgba(0, 0, 0, 0.144);
+  color: #00AEEF;
+}
+
+.hero__item-list-dropdovn-list > i {
+  position: absolute;
+  right: 20px;
+  top: 12px;
+}
+
+.two {
+  position: absolute;
+  left: 300px;
 }
 
 .provision-section .provision {
@@ -858,6 +920,7 @@ template {
 }
 .technologies-section .technologies__item-list-content > ul > li > a:hover {
   color: #00aeff;
+  margin-left: 10px;
 }
 .technologies-section .technologies__item-list:nth-child(3) {
   height: 200px;
@@ -940,4 +1003,24 @@ template {
 
 .position > img {
   top: 60px;
+}
+
+.standards-section {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.standards-section .standards {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  align-items: flex-start;
+}
+.standards-section .standards__content {
+  width: 50%;
+}
+.standards-section .standards__right {
+  width: 50%;
+  background-color: #00AEEF;
+  padding: 80px 50px 100px 50px;
 }/*# sourceMappingURL=main.css.map */
