--- a/scss/bloks/_technologies.scss
+++ b/scss/bloks/_technologies.scss
@@ -105,6 +105,7 @@
 
                                 &:hover{
                                     color: #00aeff;
+                                    margin-left: 10px;
                                 }
                             }
                         }
